new draft of mdm paper

--- a/report/decision_analytic/mdm/latex/bibliography.bib
+++ b/report/decision_analytic/mdm/latex/bibliography.bib
@@ -9,6 +9,14 @@
   publisher={Wiley Online Library}
 }
 
+@book{de1978practical,
+  title={A practical guide to splines},
+  author={De Boor, Carl and De Boor, Carl and Math{\'e}maticien, Etats-Unis and De Boor, Carl and De Boor, Carl},
+  volume={27},
+  year={1978},
+  publisher={Springer-Verlag New York}
+}
+
 @article{loeb2014heterogeneity,
   title={Heterogeneity in active surveillance protocols worldwide},
   author={Loeb, Stacy and Carter, H Ballentine and Schwartz, Mark and Fagerlin, Angela and Braithwaite, R Scott and Lepor, Herbert},
