--- a/report/decision_analytic/mdm/latex/main_manuscript.tex
+++ b/report/decision_analytic/mdm/latex/main_manuscript.tex
@@ -7,6 +7,10 @@
 
 \usepackage[colorlinks,bookmarksopen,bookmarksnumbered,citecolor=red,urlcolor=red]{hyperref}
 \usepackage{caption}
+\usepackage{pdfpages}
+\usepackage[tbtags]{amsmath}
+
+\PassOptionsToPackage{tbtags}{amsmath}
 
 \newcommand\BibTeX{{\rmfamily B\kern-.05em \textsc{i\kern-.025em b}\kern-.08em
 T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
@@ -19,7 +23,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 
 \runninghead{Au Thor, and Aut Hor}
 
-\title{Should a Biopsy be Conducted on Follow-up Visits in Prostate Cancer Active Surveillance?: A Personalized Biopsy Scheduling Approach}
+\title{Personalized Decision Making for Prostate Cancer Biopsies in Active Surveillance Programs}
 
 \author{Au Thor\affilnum{1} and Aut Hor\affilnum{2}}
 
@@ -52,10 +56,12 @@ the Netherlands.}
 \input{mainmatter/acknowledgement}
 
 \begin{sm}
-Supplementary material for this article are available in the document supplementary\_material.pdf.
+Supplementary material for this article are available after references and figures in this document.
 \end{sm}
 
 \bibliographystyle{SageV}
 \bibliography{bibliography.bib}
 
 \end{document}
+
+
