--- a/report/decision_analytic/mdm/latex/supplementary/source_code.tex
+++ b/report/decision_analytic/mdm/latex/supplementary/source_code.tex
@@ -1,3 +1,6 @@
 % !TEX root =  ../supplementary.tex
 \section{Source Code}
-The R code for fitting the joint model to the PRIAS dataset, and for the simulation study, along with sample dataset are available with this paper at the Biometrics website on Wiley Online Library.
+The R code for fitting the joint model to the PRIAS dataset, and for the simulation study, along with sample dataset, and instructions for running the code are available with this paper at the following link:
+
+\url{https://github.com/anirudhtomer/prias/tree/master/src/decision_analytic}
+
