--- a/report/decision_analytic/mdm/latex/mainmatter/abstract.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/abstract.tex
@@ -5,9 +5,9 @@
 
 \textbf{Objective.} Motivated by the world's largest AS study, Prostate Cancer Research International Active Surveillance (PRIAS), our aim is to better balance the number of biopsies and the delay in detection of cancer progression. We intend to achieve this by personalizing the decision of conducting biopsies.
 
-\textbf{Methods.} Using joint models for time-to-event and longitudinal data, we jointly model the historical prostate-specific antigen levels, digital rectal examination, and latest biopsy results of a patient at each follow-up visit. This results in a visit and patient-specific posterior predictive distribution of the time of cancer progression. Using this distribution we personalize the decision of conducting biopsy at a visit. We compare the personalized approach with the fixed schedules via a realistic and extensive simulation study based on an exact replica of the population of the patients from the PRIAS program.
+\textbf{Methods.} Using joint models for time-to-event and longitudinal data, we jointly model the historical prostate-specific antigen levels, digital rectal examination scores, and the latest biopsy results of a patient at each follow-up visit. This results in a visit and patient-specific posterior predictive distribution of the time of cancer progression. Using this distribution we personalize the decision of conducting biopsy at a visit. We compare the personalized approach with the fixed biopsy schedules via an extensive and realistic simulation study based on an exact replica of the population of the patients from the PRIAS study.
 
-\textbf{Results.} In comparison to the fixed schedules, the personalized approach saves one to seven biopsies per patient, depending upon the cancer progression speed of the patient. Despite a reduction in the number of biopsies, the delay in the detection of cancer progression for the personalized approach remains comparable with that of the schedule of PRIAS program. 
+\textbf{Results.} In comparison to the fixed schedules, the personalized approach saves one to seven biopsies per patient, depending upon the cancer progression speed of the patient. Despite a reduction in the number of biopsies, the delay in the detection of cancer progression for the personalized approach remains comparable with that of the biopsy schedule of the PRIAS study. 
 
 \textbf{Conclusions.} We conclude that the personalized schedules better balance the number of biopsies per detected cancer progression.
 \end{abstract}
